# flight-delay-predictor

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
data/processed/: fill_values.json
data/raw/: weather_250101_250430.csv
flight-delay-predictor/: README.md  pyproject.toml  requirements.txt
flight-delay-predictor/app/: interface.py  main.py  preprocessing.py  services.py  ui.py
flight-delay-predictor/data/processed/: categories.json
flight-delay-predictor/models/: notebook.ipynb
flight-delay-predictor/notebooks/: 01_data_preprocessing.ipynb  02_data_exploration.ipynb
flight-delay-predictor/src/flight_delay/: data_preprocessing.py  services.py
flight-delay-predictor/src/flight_delay/api/: aviationstack_client.py
flight-delay-predictor/src/flight_delay/utils/: dicts.py
flight-delay-predictor/src/flight_delay/visualization/: airport_map.py
flight-delay-predictor/tests/: test_services.py
src/: __init__.py  aviationstack_client.py  db.py
src/flight_delay/: data_preprocessing.py  services.py  ui.py
src/flight_delay/api/: aviationstack_client.py
src/flight_delay/utils/: dicts.py
tests/: test_aviationstack_client.py  test_services.py  test_ui.py
