[project]
name = "flight-delay-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "pydeck>=0.9.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.52.1",
    "tinydb>=4.8.2",
    "xgboost>=3.1.2",
]
[tool.uv]
package = true
