[project]
name = "flight-delay-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pydeck>=0.9.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "streamlit>=1.52.1",
    "tinydb>=4.8.2",
    "xgboost>=3.1.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flight_delay"]
package-dir = {"" = "src"}

[tool.uv]
package = true
